# dageno-mcp-growth-playbook

./: README.md  manifest.json  pyproject.toml
agents/: openai.yaml
examples/: keyword-volume-example.md  query-fanout-example.md
references/: pipeline-spec.md
skills/: dageno-content-factory.md
src/dageno_mcp_growth_playbook/: __init__.py  cli.py  client.py  workflows.py
